@startuml

title __JEU's Class Diagram__\n

  namespace jeu {
    class jeu.Joueur {
        {static} + NBR_DE_CARTES_MAX_MAIN : int
        - fauteJoueur : boolean
        - pseudo : String
        + Joueur()
        + cartesRestantes()
        + getFauteJoueur()
        + getMainDuJoueur()
        + getPileAsc()
        + getPileDesc()
        + getPioche()
        + getPseudo()
        + peutJouer()
        + peutPiocher()
        + piocheCartes()
        + poseUneCarte()
        + poseUneCarte()
        + setFauteJoueur()
        + toString()
        + toStringMainCourante()
        - creationMain()
    }
  }
  

  namespace jeu {
    class jeu.MainJ {
        - listeCarte : ArrayList<Integer>
        + MainJ()
        + creationClone()
        + getListeCarte()
        + nbrCartes()
        + poseCarte()
        + recupCarte()
        + setListeCarte()
        + toString()
        + trierMain()
        + verifSiCartePresente()
    }
  }
  

  namespace jeu {
    class jeu.Pile {
        - signePile : char
        - sommetDeLaPile : int
        + Pile()
        + getSommetDeLaPile()
        + setSommetDeLaPile()
        + toString()
    }
  }
  

  namespace jeu {
    class jeu.Pioche {
        {static} + NBR_DE_CARTES_DEPART_PIOCHE : int
        - listeCarteDansPioche : LinkedList<Integer>
        + Pioche()
        + getListeCarteDansPioche()
        + prendUneCarte()
        - creationPioche()
    }
  }
  

  namespace jeu {
    class jeu.Plateau {
        - compteurDeCartesPiochees : int
        - compteurDeCartesPosees : int
        - joueChezLadverse : boolean
        + afficherTour()
        + dernierTour()
        + gagnerPartie()
        + getCompteurDeCartesPiochees()
        + getCompteurDeCartesPosees()
        + joueurJoueDesCartes()
        + piocheSesCartes()
        {static} - convertirEnEntier()
        - jouerPileAscendante()
        - jouerPileAscendanteEnnemi()
        - jouerPileDescendante()
        - jouerPileDescendanteEnnemi()
        - perdrePartie()
    }
  }
  

  jeu.Joueur o-- jeu.MainJ : mainJDuJoueur
  jeu.Joueur o-- jeu.Pile : pileAsc
  jeu.Joueur o-- jeu.Pile : pileDesc
  jeu.Joueur o-- jeu.Pioche : pioche


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
